--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,10 @@
 [General]
 SaveFile = patreon.txt
+Sorted = True
+
 
 [Patreon]
-CreatorToken = ENTER CREATOR TOKEN
-CampaignID = ENTER CAMPAIGN ID
+CreatorToken = xxx
+CampaignID = xxx
+UseCSV = False
+CSVFile = patrons.csv
