Added post processing in order to give more cusomization for the output. Added multiple tiers in the config. Commented the code that seemed like it might need it.
Current config values are set for DwangoAC on Patreon

--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,19 @@
 SaveFile = patreon.txt
 Sorted = True
 
+[PostProcessing]
+UseTierColors = True
+
 
 [Patreon]
 CreatorToken = xxx
 CampaignID = xxx
-UseCSV = False
+UseCSV = True
 CSVFile = patrons.csv
+[Patreon.Tiers]
+Tool-Assisted Speedchatter = #1d4a69
+Tool-Assisted Speedgamer = #a243fa
+Turbo Tool-Assisted Speedgamer = #fe23c0
+Tool-Assisted Speedpicker = #49fcff
+Tool-Assisted Speedmaster = #cffa0f
+
