NOTE: NOT READY FOR USE
Changed how formatting is done for output
Changed when sorting is done
Created skeleton of the output_json() function

Notes: OutputJSON needs to be True in order to work with JSON
For testing, copy the data from https://discord.com/channels/344308425624256515/1182801790362722404/1187241085068644482 into a .txt file, and set that file as the SaveFile, then comment out lines 117-120. This will stop it trying to pull from csv or from
all_tiers is a dictionary with the footprint of `TierName:TierID`
user_tiers is a dict with `Username:TierName`

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [General]
-SaveFile = patreon.txt
+SaveFile = patreon
 Sorted = True
+OutputJSON = True
 
 [PostProcessing]
-UseTierColors = True
+OutputFormat = <span style="color:$TierColor;">$SupporterName</font>
 
 
 [Patreon]
